--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <div class="loader"></div>
-    <img src="https://picsum.photos/2000/3000" alt="">
+    <img class="image" src="https://picsum.photos/2000/3000" alt="">
 </body>
 </html>
