--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
 </head>
 <body>
     <div class="loader"></div>
-    <img class="image" src="https://picsum.photos/2000/3000" alt="">
+    <header>
+        <div class="header-left">How deep do you dive?</div>
+        <div class="header-centar">about</div>
+        <div class="header-rright">menu</div>
+    </header>
+    <main>
+        <div class="main-img">
+            <h1>Dive into the sea..</h1>
+        </div>
+        <div class="container1">
+            水深100m
+            <body>
+                <div class="bubbles">
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                </div>
+            </body>
+        </div>
+        <div class="container2">
+            水深500m
+        </div>
+        <div class="container3">
+            水深1000m
+        </div>
+        <div class="container4">
+            水深5000m
+        </div>
+        <div class="container5">
+            水深10000m
+        </div>
+
+    </main>
+
+
 </body>
 </html>
