波紋ができない

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/jquery.ripples-min.js"></script>
   <script defer src="./assets/js/app.js"></script>
 
 
@@ -19,13 +20,14 @@
         <div class="header-centar">about</div>
         <div class="header-rright">menu</div>
     </header>
+    
     <main>
+        <div class="container"></div>
         <div class="main-img">
             <h1>Dive into the sea..</h1>
         </div>
         <div class="container1">
             水深100m
-            <body>
                 <div class="bubbles">
                     <div class="bubble"></div>
                     <div class="bubble"></div>
@@ -33,20 +35,52 @@
                     <div class="bubble"></div>
                     <div class="bubble"></div>
                 </div>
-            </body>
         </div>
         <div class="container2">
             水深500m
+
+            <div class="bubbles">
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+            </div>
         </div>
         <div class="container3">
             水深1000m
+
+            <div class="bubbles">
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+            </div>
         </div>
         <div class="container4">
             水深5000m
+
+            <div class="bubbles">
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+            </div>
         </div>
         <div class="container5">
             水深10000m
+
+            <div class="bubbles">
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+                <div class="bubble"></div>
+            </div>
         </div>
+    </div>
 
     </main>
 
