--- a/index.html
+++ b/index.html
@@ -18,69 +18,63 @@
     <header>
         <div class="header-left">How deep do you dive?</div>
         <div class="header-centar">about</div>
-        <div class="header-rright">menu</div>
+        <div class="header-right">
+
+    <figure>
+        <audio
+            controls loop
+            src="../website/assets/img/sea1.mp3">
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio>
+    </figure>
+        </div>
     </header>
     
     <main>
-        <div class="container"></div>
+        <div class="container">
         <div class="main-img">
             <h1>Dive into the sea..</h1>
         </div>
         <div class="container1">
-            水深100m
-                <div class="bubbles">
-                    <div class="bubble"></div>
-                    <div class="bubble"></div>
-                    <div class="bubble"></div>
-                    <div class="bubble"></div>
-                    <div class="bubble"></div>
-                </div>
+            epipelagic
+            <img src="../website/assets/img/fish1.jpeg" alt="" width="30%">
         </div>
         <div class="container2">
-            水深500m
+            200m
+            <img src="../website/assets/img/fish1.jpeg" alt="">
+            <img src="../website/assets/img/fish2.jpeg" alt="">
+            <img src="../website/assets/img/fish3.jpeg" alt="">
+            <img src="../website/assets/img/fish4.jpeg" alt="">
+            <img src="../website/assets/img/fish5.jpeg" alt="">
+            <img src="../website/assets/img/fish6.jpeg" alt="">
+            <img src="../website/assets/img/fish7.jpeg" alt="">
+            <img src="../website/assets/img/fish8.jpeg" alt="">
+            <img src="../website/assets/img/fish9.jpeg" alt="">
+            <img src="../website/assets/img/fish10.jpeg" alt="">
+            <img src="../website/assets/img/fish11.jpeg" alt="">
+            <img src="../website/assets/img/fish12.jpeg" alt="">
+            <img src="../website/assets/img/fish13.jpeg" alt="">
+            <img src="../website/assets/img/fish14.jpeg" alt="">
 
-            <div class="bubbles">
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-            </div>
+            
         </div>
+        <img src="../website/assets/img/photo-1512330905118-bab4c9f0d29a.jpeg" alt="" width="50%">
         <div class="container3">
             水深1000m
 
-            <div class="bubbles">
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-            </div>
         </div>
+        <img src="../website/assets/img/fish2.jpeg" alt="" width="10%">
         <div class="container4">
-            水深5000m
+            水深4000m
 
-            <div class="bubbles">
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-            </div>
         </div>
         <div class="container5">
             水深10000m
-
-            <div class="bubbles">
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
             </div>
         </div>
-    </div>
+        </div>
+
 
     </main>
 
