--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Dive into the sea</title>
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/jquery.ripples-min.js"></script>
+  <script defer src="./assets/js/jquery.ripples-min.js"></script>
   <script defer src="./assets/js/app.js"></script>
 
 
@@ -38,7 +38,6 @@
         </div>
         <div class="container1">
             epipelagic
-            <img src="../website/assets/img/fish1.jpeg" alt="" width="30%">
         </div>
         <div class="container2">
             200m
@@ -46,7 +45,6 @@
             
         </div>
         
-        <img src="../website/assets/img/photo-1512330905118-bab4c9f0d29a.jpeg" alt="" width="50%">
         <div class="container3">
             水深1000m
 
@@ -57,7 +55,7 @@
 
         <div class="container4">
             水深4000m
-            <img src="../website/assets/img/fish4.jpeg" alt="">
+            <img class="fish4" src="../website/assets/img/fish4.jpeg" alt="">
 
         </div>
         <div class="container5">
