テキスト入力

--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dive into the sea</title>
   <link rel="stylesheet" href="./assets/css/reset.css">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+
   <link rel="stylesheet" href="./assets/css/style.css">
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script defer src="./assets/js/jquery.ripples-min.js"></script>
+  <script src="./assets/js/parallax.min.js"></script>
   <script defer src="./assets/js/app.js"></script>
 
 
 </head>
 <body>
     <div class="loader"></div>
-    <header>
-        <div class="header-left">How deep do you dive?</div>
-        <div class="header-centar">about</div>
+    <header class=''>
+        <div class="header-left">
+            <dt id="how">How deep do you wanna dive?</dt>
+            <dd><a href="">0m</a></dd>
+            <dd><a href="">200m</a></dd>
+            <dd><a href="">1000m</a></dd>
+            <dd><a href="">4000m</a></dd>
+            <dd><a href="">10000m</a></dd>
+        </div>
+        <div class="header-centar">
+            
+        </div>
         <div class="header-right">
 
     <figure>
@@ -37,7 +49,13 @@
             <h1>Dive into the sea..</h1>
         </div>
         <div class="container1">
-            epipelagic
+            <h2>Start</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam natus obcaecati ducimus praesentium qui eaque laborum illo laboriosam, autem sit incidunt, sed repudiandae eveniet voluptatem optio libero, sunt est. Necessitatibus velit atque neque ipsum esse dolore numquam autem sequi accusantium assumenda soluta, dolores commodi ratione hic debitis consequuntur veritatis quibusdam expedita optio nesciunt nihil! Velit, ea! Sed repellendus, cumque, ipsum vel ullam architecto hic deserunt laborum, cupiditate dolores culpa impedit? Saepe officia quaerat vero. Perspiciatis nulla aliquid corporis consequuntur cupiditate.
+            </p>
+            <div class='box1'>
+                <div class="textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium similique hic doloremque, omnis quasi cupiditate repellat quod illo quis voluptates suscipit obcaecati veritatis perspiciatis sunt quibusdam facilis dolorum delectus nulla consequuntur voluptatibus maxime odio. Dolore obcaecati sunt recusandae adipisci ratione doloremque voluptas qui dolorum? Itaque repudiandae labore reprehenderit ullam aliquam. Modi, quo omnis accusantium sequi id hic amet inventore adipisci impedit ratione molestiae quae velit facere laborum, dolore numquam vitae neque vel ab quaerat repellendus. Optio consequatur dolores voluptate ea.</div>
+                <img class="fish4" src="../website/assets/img/fish4.jpeg" alt="" width="50%">
+            </div>
         </div>
         <div class="container2">
             200m
@@ -55,7 +73,6 @@
 
         <div class="container4">
             水深4000m
-            <img class="fish4" src="../website/assets/img/fish4.jpeg" alt="">
 
         </div>
         <div class="container5">
