--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dive into the sea</title>
   <link rel="stylesheet" href="./assets/css/reset.css">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-
   <link rel="stylesheet" href="./assets/css/style.css">
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script defer src="./assets/js/jquery.ripples-min.js"></script>
-  <script defer src="./assets/js/rellax.js"></script>
+  <!-- <script defer src="./assets/js/rellax.js"></script> -->
   <script defer src="./assets/js/app.js"></script>
 
 
@@ -58,12 +56,12 @@
                 </div>
                 <img class="fish4 fadein" src="../website/assets/img/fish4.jpeg" alt="" width="50%">
             </div>
-            <h2 id="no2">200m-1000m</h2>
-            <img src="../website/assets/img/fish21.jpeg" class="fadein" alt="" width="100%">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ut iste numquam, ex dolore vel eveniet repudiandae ipsa nesciunt a aut laudantium atque cum assumenda architecto ipsum obcaecati aspernatur velit recusandae magnam quo sit corporis! Soluta, dolor a. Itaque et odio sequi atque optio rem error quas aliquam delectus amet</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum mollitia eligendi magni molestiae praesentium possimus sapiente voluptatibus cumque delectus illum distinctio ex iste quisquam accusamus iure, recusandae voluptatem eum nemo aspernatur? Eligendi a officiis beatae odio quibusdam repudiandae nam ipsa? Illum aliquam totam at perferendis excepturi. Praesentium dolores tenetur, earum dolorum maxime fugiat natus eius similique atque, consequuntur consectetur, saepe debitis rerum minus nihil nesciunt ab. Nostrum, officia sint nihil, deleniti labore mollitia impedit iusto quas adipisci molestiae ipsam cum.</p>
-            <h2 id="no3">1000-4000m</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed porro impedit, dolor, earum fugit quod reprehenderit dolorum odio dolore enim, non voluptates molestias provident alias veritatis dolores sint repellat blanditiis veniam temporibus commodi deserunt libero explicabo. Sint repudiandae tempora expedita veniam. Eligendi dolores, deleniti veniam consequatur maxime laboriosam neque minima esse libero animi placeat magni porro! Aspernatur, quam doloremque molestias maiores modi est tempore impedit dolore provident possimus numquam ex quia illo non perferendis consequatur debitis nulla, eveniet voluptatem consectetur recusandae sint facilis aut tenetur! Aut dolorem facere, impedit minima voluptatum voluptates maiores, aliquid assumenda nihil expedita sed sint minus.</p>
+                <h2 id="no2">200m-1000m</h2>
+                <img src="../website/assets/img/fish21.jpeg" class="fadein" alt="" width="100%">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ut iste numquam, ex dolore vel eveniet repudiandae ipsa nesciunt a aut laudantium atque cum assumenda architecto ipsum obcaecati aspernatur velit recusandae magnam quo sit corporis! Soluta, dolor a. Itaque et odio sequi atque optio rem error quas aliquam delectus amet</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum mollitia eligendi magni molestiae praesentium possimus sapiente voluptatibus cumque delectus illum distinctio ex iste quisquam accusamus iure, recusandae voluptatem eum nemo aspernatur? Eligendi a officiis beatae odio quibusdam repudiandae nam ipsa? Illum aliquam totam at perferendis excepturi. Praesentium dolores tenetur, earum dolorum maxime fugiat natus eius similique atque, consequuntur consectetur, saepe debitis rerum minus nihil nesciunt ab. Nostrum, officia sint nihil, deleniti labore mollitia impedit iusto quas adipisci molestiae ipsam cum.</p>
+                <h2 id="no3">1000-4000m</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed porro impedit, dolor, earum fugit quod reprehenderit dolorum odio dolore enim, non voluptates molestias provident alias veritatis dolores sint repellat blanditiis veniam temporibus commodi deserunt libero explicabo. Sint repudiandae tempora expedita veniam. Eligendi dolores, deleniti veniam consequatur maxime laboriosam neque minima esse libero animi placeat magni porro! Aspernatur, quam doloremque molestias maiores modi est tempore impedit dolore provident possimus numquam ex quia illo non perferendis consequatur debitis nulla, eveniet voluptatem consectetur recusandae sint facilis aut tenetur! Aut dolorem facere, impedit minima voluptatum voluptates maiores, aliquid assumenda nihil expedita sed sint minus.</p>
             <div class="box1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit culpa praesentium, quis quidem eaque at veniam aspernatur deserunt provident quae? Quam magnam soluta quo blanditiis, assumenda accusamus error reprehenderit dolor obcaecati aspernatur distinctio quibusdam officia! Error beatae autem ut quia natus consectetur fugiat, dolor hic facere iure culpa praesentium eaque earum voluptas numquam. Optio, porro suscipit quisquam unde nulla accusamus sit repudiandae sunt culpa voluptatem quaerat quae, commodi consequuntur aspernatur debitis deserunt? Magnam quod odit excepturi, dolore aspernatur dolor laborum animi vitae totam necessitatibus, sequi aut qui. Mollitia accusantium eius ut non excepturi quo inventore fugiat debitis. Ducimus, esse enim?</p>
         
